# dv-flow-cmake

./: README.md  ivpm.yaml  pyproject.toml
docs/: theory_of_ops.md
src/dv_flow/cmake/: __ext__.py
src/dv_flow/cmake/share/: dfm.cmake  dfm_task.cmake  dfm_util
